--- a/src/styles.css
+++ b/src/styles.css
@@ -1,123 +1,158 @@
-html{
+html {
     scroll-behavior: smooth;
 }
-body{
-    margin:0;
+
+body {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     background: #2C2C2C;
-    color:#D6D3D3;
+    color: #D6D3D3;
 
 
 }
 
-.container{
+.container {
     min-width: 320px;
-    max-width:1440px;
+    max-width: 1440px;
 }
-h1, h2, h3, p{
-    margin:0; 
+
+h1,
+h2,
+h3,
+p {
+    margin: 0;
 }
-h2{
+
+h2 {
     margin-bottom: 0.635rem;
 }
-p{
-    margin-bottom: 0.3125rem;   
+
+p {
+    margin-bottom: 0.3125rem;
 }
-img{
+
+img {
     max-width: 100%;
     width: 100%;
-    height:100%;
+    height: 100%;
     vertical-align: middle;
     font-style: italic;
     background-repeat: no-repeat;
     background-size: cover;
     shape-margin: 0.75rem;
 }
+
 /*layout*/
-.hero-section{
-    height:60vh;
-    
+.hero-section {
+    height: 60vh;
+
 }
 
-.button-section-wrapper{
-    padding: 1rem ;
+.button-section-wrapper {
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:0.625rem;
-    
+    gap: 0.625rem;
+
 }
-.button{
+
+.button:hover {
+    opacity: 80%;
+    background: #414141;
+    color: #D6D3D3;
+    box-shadow:  white 0px 0px 5px 1px;
+}
+
+.button:active{
+    transition: 0s;
+    background: #D6D3D3;
+}
+
+.button {
     padding: 0.5625rem 0.9375rem;
     border-radius: 50px;
     border: none;
     background: #D6D3D3;
-    color:#707070;
-   
-    
+    color: #3a3a3a;
+    transition: ease .17s;
 }
-.section-wrapper{
+
+.active-panel {
+    background: #282828;
+    color: #D6D3D3;
+    box-shadow: inset 0px 0px 0px 3px white;
+}
+
+.section-wrapper {
     padding: 1.875rem 6.25rem;
 }
+
 /*first template*/
-.hero-section-wrapper{
+.hero-section-wrapper {
     height: 100%;
     display: flex;
     position: relative;
 }
-.color-background{
+
+.color-background {
     width: 50%;
-    
+
     height: auto;
-    border-radius: 0 30vh 30vh 0 ;
+    border-radius: 0 30vh 30vh 0;
     background-color: rgba(57, 60, 65, 0.8);
-    
-    
+
+
     position: absolute;
-            top: 0%;
-            left: 0%;
-            bottom: 0%;
-            
-           
-            z-index: 2;
-            display:flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
+    top: 0%;
+    left: 0%;
+    bottom: 0%;
+
+
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
-.img-wrapper{
+
+.img-wrapper {
     width: 100%;
     position: absolute;
-    left:auto;
-    top:0%;
+    left: auto;
+    top: 0%;
     right: 0%;
-    bottom:0%;
-    
+    bottom: 0%;
+
 }
-.element-label{
+
+.element-label {
     font-size: 6.25rem;
 }
 
 /*MEDIA QUERIESSSSSSSSSSS*/
-@media (max-width:768px){
-    .hero-section{
-        height:50vh;
-        
+@media (max-width:768px) {
+    .hero-section {
+        height: 50vh;
+
     }
-    .button-section-wrapper{
-        padding: 0.5rem ;
-        gap:0.3125rem;
-        
+
+    .button-section-wrapper {
+        padding: 0.5rem;
+        gap: 0.3125rem;
+
     }
-    .button{
+
+    .button {
         padding: 0.5625rem;
         border-radius: 50px;
         font-size: 0.75rem;
-        
+
     }
-    .section-wrapper{
+
+    .section-wrapper {
         padding: 1.875rem 2.5rem;
     }
 
