--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background: #2C2C2C;
     color: #D6D3D3;
-
-
 }
 
 .container {
@@ -57,6 +55,20 @@ img {
     align-items: center;
     gap: 0.625rem;
 
+}
+
+.loading-skel {
+    background: linear-gradient(110deg,#3d3d3d  8%, #4b4b4b 18%, #3d3d3d 33%) ;
+    border-radius: 10px;
+    background-size: 200% 100% ;
+    animation: 1.5s shine linear infinite;
+    -webkit-animation: 1.5s shine linear infinite; 
+}
+
+@keyframes shine {
+  to {
+    background-position-x: -200% ;
+  }
 }
 
 .button:hover {
@@ -109,7 +121,8 @@ img {
 
     height: auto;
     border-radius: 0 30vh 30vh 0;
-    background-color: rgba(57, 60, 65, 0.8);
+    /* background-color: rgba(57, 60, 65, 0.8); */
+    background-color: rgba(64, 64, 64, 0.8);
 
 
     position: absolute;
